fix highlight when overflow

--- a/overlays/mariokart/src/App.css
+++ b/overlays/mariokart/src/App.css
@@ -69,3 +69,7 @@
         filter: hue-rotate(0deg) brightness(1);
     }
 }
+.new-message {
+    /* pomyśl, czy nie chcesz też tego slide ina*/
+    animation: filterHighlight 1s ease-in-out;
+}
